# QwenASR-tauri

./: .gitignore  .prettierignore  CONTRIBUTING.md  LICENSE  README.md  README.zh.md  index.html  lingui.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.mjs  vite.config.ts
.cargo/: config.toml
.github/workflows/: build.yml
scripts/: generate-social-preview.mjs  prepare-mlx-metallib.mjs  prepare-mlx-metallib.test.mjs  update-version.mjs
src/: App.css  App.tsx  i18n.ts  index.css  main.tsx  vite-env.d.ts
src-tauri/: Assets.car  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: about.json  default.json
src-tauri/examples/: asr_smoke.rs  forced_alignment_smoke.rs  vad_smoke.rs
src-tauri/icons/: icon.icns
src-tauri/icons/AppIcon.icon/: icon.json
src-tauri/resources/firered-vad-onnx/: README.md  cmvn.json  model.onnx
src-tauri/src/: audio.rs  downloader.rs  error.rs  forced_alignment.rs  lib.rs  main.rs  models.rs  paths.rs  srt.rs  transcription.rs  vad.rs
src/components/: theme-provider.tsx
src/components/app/: AppToolbar.tsx  WorkspaceSidebar.tsx
src/components/transcription/: AboutPanel.tsx  AboutWindow.tsx  BatchTranscriptionPanel.tsx  ModelPanel.tsx  OptionsPanel.tsx  ResultsPanel.tsx  RuntimePanel.tsx  SettingsPanel.tsx  SettingsSection.tsx  SingleTranscriptionPanel.tsx  SupportBanner.tsx  TaskManagerPanel.tsx  TranscriptionProgressPanel.tsx
src/components/ui/: card.tsx  dialog.tsx  empty.tsx  scroll-area.tsx  sheet.tsx  tabs.tsx  tooltip.tsx
src/hooks/: use-transcription-workspace.ts
src/lib/: app-constants.ts  format.ts
src/locales/en/: messages.po
src/locales/ja/: messages.po
src/locales/zh-Hans/: messages.po
src/locales/zh-Hant/: messages.po
src/types/: transcription.ts
