[package]
name = "qwenasr-tauri"
version = "0.1.0"
description = "macOS audio transcription app powered by QwenASR"
authors = ["gnehs"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "qwenasr_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
thiserror = "2.0.18"
dirs = "6.0.0"
uuid = { version = "1.23.4", features = ["v4", "serde"] }
hf-hub = { version = "1.0.0-rc.1", features = ["blocking", "rustls-tls"] }
tokenizers = "0.21"

[target.'cfg(target_os = "macos")'.dependencies]
qwen3_asr = { git = "https://github.com/second-state/qwen3_asr_rs", tag = "v0.2.0", default-features = false, features = ["mlx"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
qwen3_asr = { git = "https://github.com/second-state/qwen3_asr_rs", tag = "v0.2.0" }
tch = "0.20"
