[package]
name = "qwenasr-tauri"
version = "0.1.0"
description = "macOS audio transcription app powered by QwenASR"
authors = ["gnehs"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "qwenasr_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
thiserror = "2.0.18"
dirs = "6.0.0"
uuid = { version = "1.23.4", features = ["v4", "serde"] }
hf-hub = { version = "1.0.0-rc.1", features = ["blocking", "rustls-tls"] }
tokenizers = "0.21"
opencc-rs = "0.5.2"
hound = "3.5"
tract-onnx = "0.22"
rustfft = "6.4"
tauri-plugin-notification = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3.2", features = ["NSColor", "NSWindow", "objc2-core-foundation"] }
qwen3_asr = { package = "qwen3-asr-rs", path = "vendor/qwen3_asr", default-features = false, features = ["mlx"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
qwen3_asr = { package = "qwen3-asr-rs", path = "vendor/qwen3_asr" }
tch = "0.20"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
